Fixes stupid bug in dark mode media query

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -5,9 +5,11 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    --primary-colour: #111111; 
-    --secondary-colour: #FFFFFF;
-    --tertiary-colour: #FFFFFF;
+    :root {
+        --primary-colour: #111111; 
+        --secondary-colour: #FFFFFF;
+        --tertiary-colour: #FFFFFF;
+    }
 }
 
 body {
